@@ -1648,8 +1648,26 @@ bool TMCG_OpenPGP_Subkey::CheckExternalRevocation
 	bool valid_revsig = false;
 	for (size_t k = 0; k < revkeys.size(); k++)
 	{
+		size_t fprlen = 0;
+		if ((revkeys[k].key_fingerprint[20] == 0x00) &&
+			(revkeys[k].key_fingerprint[21] == 0x00) &&
+			(revkeys[k].key_fingerprint[22] == 0x00) &&
+			(revkeys[k].key_fingerprint[23] == 0x00) &&
+			(revkeys[k].key_fingerprint[24] == 0x00) &&
+			(revkeys[k].key_fingerprint[25] == 0x00) &&
+			(revkeys[k].key_fingerprint[26] == 0x00) &&
+			(revkeys[k].key_fingerprint[27] == 0x00) &&
+			(revkeys[k].key_fingerprint[28] == 0x00) &&
+			(revkeys[k].key_fingerprint[29] == 0x00) &&
+			(revkeys[k].key_fingerprint[30] == 0x00) &&
+			(revkeys[k].key_fingerprint[31] == 0x00))
+		{
+			fprlen = 20; // V4 key
+		}
+		else
+			fprlen = 32; // V5 key
 		tmcg_openpgp_octets_t fpr(revkeys[k].key_fingerprint,
-			revkeys[k].key_fingerprint+sizeof(revkeys[k].key_fingerprint));
+			revkeys[k].key_fingerprint+fprlen);
 		std::string fprstr;
 		CallasDonnerhackeFinneyShawThayerRFC4880::
 			FingerprintConvertPlain(fpr, fprstr);
@@ -3016,9 +3034,27 @@ void TMCG_OpenPGP_Pubkey::UpdateProperties
 		revkeys.push_back(rk);
 		if (verbose > 1)
 		{
-			std::string fpr_str;
+			size_t fprlen = 0;
+			if ((rk.key_fingerprint[20] == 0x00) &&
+				(rk.key_fingerprint[21] == 0x00) &&
+				(rk.key_fingerprint[22] == 0x00) &&
+				(rk.key_fingerprint[23] == 0x00) &&
+				(rk.key_fingerprint[24] == 0x00) &&
+				(rk.key_fingerprint[25] == 0x00) &&
+				(rk.key_fingerprint[26] == 0x00) &&
+				(rk.key_fingerprint[27] == 0x00) &&
+				(rk.key_fingerprint[28] == 0x00) &&
+				(rk.key_fingerprint[29] == 0x00) &&
+				(rk.key_fingerprint[30] == 0x00) &&
+				(rk.key_fingerprint[31] == 0x00))
+			{
+				fprlen = 20; // V4 key
+			}
+			else
+				fprlen = 32; // V5 key
 			tmcg_openpgp_octets_t fpr(rk.key_fingerprint,
-				 rk.key_fingerprint+sizeof(rk.key_fingerprint));
+				 rk.key_fingerprint+fprlen);
+			std::string fpr_str;
 			CallasDonnerhackeFinneyShawThayerRFC4880::
 				FingerprintConvertPretty(fpr, fpr_str);
 			std::cerr << "[" << fpr_str << "]";
@@ -3079,8 +3115,26 @@ bool TMCG_OpenPGP_Pubkey::CheckExternalRevocation
 	bool valid_revsig = false;
 	for (size_t k = 0; k < revkeys.size(); k++)
 	{
+		size_t fprlen = 0;
+		if ((revkeys[k].key_fingerprint[20] == 0x00) &&
+			(revkeys[k].key_fingerprint[21] == 0x00) &&
+			(revkeys[k].key_fingerprint[22] == 0x00) &&
+			(revkeys[k].key_fingerprint[23] == 0x00) &&
+			(revkeys[k].key_fingerprint[24] == 0x00) &&
+			(revkeys[k].key_fingerprint[25] == 0x00) &&
+			(revkeys[k].key_fingerprint[26] == 0x00) &&
+			(revkeys[k].key_fingerprint[27] == 0x00) &&
+			(revkeys[k].key_fingerprint[28] == 0x00) &&
+			(revkeys[k].key_fingerprint[29] == 0x00) &&
+			(revkeys[k].key_fingerprint[30] == 0x00) &&
+			(revkeys[k].key_fingerprint[31] == 0x00))
+		{
+			fprlen = 20; // V4 key
+		}
+		else
+			fprlen = 32; // V5 key
 		tmcg_openpgp_octets_t fpr(revkeys[k].key_fingerprint,
-			revkeys[k].key_fingerprint+sizeof(revkeys[k].key_fingerprint));
+			revkeys[k].key_fingerprint+fprlen);
 		std::string fprstr;
 		CallasDonnerhackeFinneyShawThayerRFC4880::
 			FingerprintConvertPlain(fpr, fprstr);
@@ -4393,7 +4447,25 @@ size_t TMCG_OpenPGP_Keyring::List
 				tmcg_openpgp_revkey_t rvk = pub->revkeys[i]; 
 				std::cout << "rvk:::";
 				std::cout << (int)rvk.key_pkalgo << "::::::";
-				for (size_t j = 0; j < sizeof(rvk.key_fingerprint); j++)
+				size_t fprlen = 0;
+				if ((rvk.key_fingerprint[20] == 0x00) &&
+					(rvk.key_fingerprint[21] == 0x00) &&
+					(rvk.key_fingerprint[22] == 0x00) &&
+					(rvk.key_fingerprint[23] == 0x00) &&
+					(rvk.key_fingerprint[24] == 0x00) &&
+					(rvk.key_fingerprint[25] == 0x00) &&
+					(rvk.key_fingerprint[26] == 0x00) &&
+					(rvk.key_fingerprint[27] == 0x00) &&
+					(rvk.key_fingerprint[28] == 0x00) &&
+					(rvk.key_fingerprint[29] == 0x00) &&
+					(rvk.key_fingerprint[30] == 0x00) &&
+					(rvk.key_fingerprint[31] == 0x00))
+				{
+					fprlen = 20; // V4 key
+				}
+				else
+					fprlen = 32; // V5 key
+				for (size_t j = 0; j < fprlen; j++)
 					fprintf(stdout, "%02X", rvk.key_fingerprint[j]);
 				fprintf(stdout, ":%02x", rvk.key_class);
 				if ((rvk.key_class & 0x40) == 0x40)
@@ -8546,17 +8618,15 @@ tmcg_openpgp_byte_t CallasDonnerhackeFinneyShawThayerRFC4880::SubpacketDecode
 			for (size_t i = 0; i < pkt.size(); i++)
 				out.psa[i] = pkt[i];
 			break;
-		case 12: // Revocation Key
-			if (pkt.size() != 22)
+		case 12: // Revocation Key (cf. changes from [draft RFC 4880bis])
+			if ((pkt.size() != 22) || (pkt.size() != 34))
 				return 0; // error: incorrect subpacket body
 			// Class octet must have bit 0x80 set.
 			if ((pkt[0] & 0x80) != 0x80)
 				return 0; // error: bad class
 			out.revocationkey_class = pkt[0];
-			out.revocationkey_pkalgo =
-				(tmcg_openpgp_pkalgo_t)pkt[1];
-			for (size_t i = 0;
-			     i < sizeof(out.revocationkey_fingerprint); i++)
+			out.revocationkey_pkalgo = (tmcg_openpgp_pkalgo_t)pkt[1];
+			for (size_t i = 0; i < (pkt.size() - 2); i++)
 				out.revocationkey_fingerprint[i] = pkt[2+i];
 			break;
 		case 16: // Issuer
